[tool.poetry]
name = "vk-monitor"
version = "0.1.0"
description = ""
authors = ["PatriotRossii <patriotrossii2019@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.1"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
vk = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
